<resources>
    <string name="app_name">Ricettavola</string>

    <!-- Confirm Dialog -->
    <string name="delete_recipe_title">Delete Recipe</string>
    <string name="delete_recipe_content">Do you want to delete this recipe?</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>

    <string name="delete_shopping_list_title">Delete Shopping List</string>
    <string name="delete_shopping_list_content">Do you want to empty the shopping list?</string>


    <!-- Main -->
    <string name="title_activity_main">MainActivity</string>
    <string name="main_recipes_tab_title">Recipes</string>
    <string name="main_shopping_list_tab_title">Shopping List</string>
    <string name="clipboard_ok">Recipe added!</string>
    <string name="clipboard_error">Recipe not created! Invalid text!</string>


    <!-- Recipe -->
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="share_using">Share your recipe!</string>
    <string name="toolbar_title_editMode_on">Modify your recipe!</string>

    <string name="recipe_warning_message_title">Be careful!</string>
    <string name="recipe_warning_message">All changes made will be lost! Continue?</string>

    <string name="recipe_summary_tab_title">Summary</string>
    <string name="recipe_ingredients_tab_title">Ingredients</string>
    <string name="recipe_preparation_tab_title">Preparation</string>

    <string name="recipe_summary_text_preparation">Preparation</string>
    <string name="recipe_summary_text_cooking">Cooking</string>
    <string name="recipe_summary_text_portions">Portions</string>
    <string name="recipe_summary_text_difficulty">Difficulty</string>
    <string name="recipe_summary_text_tags">TAGS</string>

    <string name="recipe_ingredient_popup_title">Insert new ingredient: </string>
    <string name="recipe_ingredient_placeholder_item">Insert new ingredient</string>

    <string name="recipe_preparationstep_popup_title">Insert new step: </string>
    <string name="recipe_preparationstep_placeholder_item">Insert new step description</string>


    <string name="action_settings">Settings</string>
    <string name="action_add_recipe">Add recipe from clipboard</string>
    <string name="action_toggle_language">Change language</string>
    <string name="action_add_to_shopping_list">Add ingredients to shopping list</string>
    <string name="action_empty_shopping_list">Empty shopping list</string>
    <string name="ingredients_added">Ingredients added!</string>
    <string name="ingredients_not_added">Something went wrong! Ingredients not added...</string>
    <string name="action_remove_bought">Remove bought ingredients</string>


</resources>
