<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".RecipeActivity"
    android:theme="@style/AppTheme.NoActionBar"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/recipe_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="enterAlways"
            >

            <include layout="@layout/toolbar_recipe"/>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorColor="@color/colorAccent"
            >

            <android.support.design.widget.TabItem
                android:id="@+id/tab_recipes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_summary_tab_title"
                />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_ingredients_tab_title"
                />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_preparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_preparation_tab_title"
                />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

</android.support.design.widget.CoordinatorLayout>
